--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,5 @@
+# make a symlink of this file in your home directory with
+# ln -s ~/.config/.tmux.conf ~/.tmux.conf
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
