add render-markdown, vim-tmux-navigator, tmux-mighty-scroll, tmux-sensible, and tpm

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,21 @@
 # make a symlink of this file in your home directory with
 # ln -s ~/.config/.tmux.conf ~/.tmux.conf
+
+# vim-style key bindings for copy mode
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
 bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+set -g @plugin 'noscript/tmux-mighty-scroll'
+set -g mouse on
+set -g @mighty-scroll-interval 3
+set -g @mighty-scroll-show-indicator on
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
